fix(popup): deal with container height overflow

--- a/src/drawer/drawer.less
+++ b/src/drawer/drawer.less
@@ -16,8 +16,8 @@
 
 .@{prefix}-drawer {
   background: @drawer-bg-color;
-  height: 100vh;
   width: @drawer-width;
+  height: 100%;
   display: flex;
   flex-direction: column;
 
